--- a/website/static/css/form.sass
+++ b/website/static/css/form.sass
@@ -23,6 +23,9 @@
   cursor: pointer
   transition: background 0.3s
 
+.autocomplete-items div.hidden
+  display: none
+
 .autocomplete-items div:hover
   background: #007bff
   color: white
